--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -387,6 +387,14 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 #content-indicators
   width: 45px
 
+.vertical-swipe
+  width: 370px
+  height: 208px
+  overflow: auto
+  -webkit-overflow-scrolling: touch
+  .item
+    margin: 0px
+
 ////////////////////////////////////////
 
 /* Unique Styles */
@@ -641,6 +649,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     width: 285px
     margin: 0px 14px
 
+  .vertical-swipe
+    width: 300px
+    height: 168px
+
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px)
   #hero-container
@@ -649,6 +661,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         width: 72%
         h2
           font-size: 20px
+
+  .vertical-swipe
+    width: 228px
+    height: 128px
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
@@ -683,6 +699,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
         width: 35px
     .media-block
       width: 100%
+
+  .vertical-swipe
+    width: 100%
+    height: 400px
  
 /* Landscape phones and down */
 @media (max-width: 480px)
