font change, raleway

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -91,6 +91,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 .modal
   border-radius: 0px
 
+h1, h2, h3, h4
+  font-family: 'Raleway', sans-serif
+  letter-spacing: 1px
+
 ////////////////////////////////////////
 
 /* Media Objects */
