css tweak media centered

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -649,9 +649,12 @@ h1, h2, h3, h4
     img
       margin-top: -15%
 
+  .media-centered-medium
+    height: 208px
+
 @media (max-width: 1200px)
   .media-centered-medium
-    height: inherit
+    height: 168px
 
   .item-medium
     width: 285px
@@ -669,6 +672,9 @@ h1, h2, h3, h4
         width: 72%
         h2
           font-size: 20px
+
+  .media-centered-medium
+    height: 128px
 
   .vertical-swipe
     width: 228px
@@ -708,6 +714,9 @@ h1, h2, h3, h4
     .media-block
       width: 100%
 
+  .media-centered-medium
+    height: inherit
+
   .vertical-swipe
     width: 100%
     height: 400px
@@ -717,4 +726,3 @@ h1, h2, h3, h4
   #hero-container
     .media-object
       margin-bottom: 0px
-
