--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -98,6 +98,11 @@ h1, h2, h3, h4
 ////////////////////////////////////////
 
 /* Media Objects */
+
+.gallery
+  .media-centered
+    margin-bottom: 20px
+
 .section
   margin-top: 20px
   
