--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -2,7 +2,7 @@
   .span12#recipe-gallery
     %h2 Recipes
     = paginate @recipes
-    .row
+    .row.gallery
       - @recipes.each do |recipe|
         .span4
           = link_to activity_path(recipe) do
