--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -326,6 +326,10 @@ h1, h2, h3, h4
 .community-toggle-open
   left: 0px
 
+/* One Sheet Toggle Classes */
+.step-image-show
+  display: block
+
 /* Course */
 .course-syllabus
   .nested-1
@@ -498,7 +502,7 @@ h1, h2, h3, h4
 /* Buttons */
 
 .btn-primary
-  background: $dark_orange
+  background: $orange
   border: none
   border-radius: 0px
   @include transition(all 100ms)
