show all ingredients

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -253,7 +253,7 @@ h1, h2, h3, h4
   width: 100%
   padding-right: 2px
 
-.activity-ingredients-list
+.activity-ingredients-list, .step-ingredients-source
   table
     width: 100%
   thead
@@ -296,6 +296,10 @@ h1, h2, h3, h4
   .ingredient-unhighlighted
     opacity: .2
     font-weight: 40
+
+.step-ingredients-source
+  position: relative
+  display: none
 
 #main-content
   position: relative
