--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -69,14 +69,17 @@
                     -if step.ingredients.any?
                       .btn.step-action-item.step-ingredients.btn-primary
                         %i.icon-th-list
-                        .step-ingredients-source
-                          = render 'ingredients_list', ingredients: step.ingredients
+                        / .step-ingredients-source
+                        /   = render 'ingredients_list', ingredients: step.ingredients
                     - if step.image_id?
                       .btn.step-action-item.step-image-btn.btn-primary
                         %i.icon-picture
                   - if step.image_id?
                     .step-image{id: "step-image-#{index}"}
                       = image_tag s3_image_url(step.image_id)
+                  - if step.ingredients.any?
+                    .step-ingredients-source.well.section
+                      = render 'ingredients_list', ingredients: step.ingredients
         .scroll-overlay-top
         .scroll-overlay-bottom
       .span6.community
