fix question sign

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -254,6 +254,7 @@ h1, h2, h3, h4
   padding-right: 2px
 
 .activity-ingredients-list, .step-ingredients-source
+  position: relative
   table
     width: 100%
   thead
@@ -267,7 +268,8 @@ h1, h2, h3, h4
       margin-left: -11px
     .icon-question-sign
       position: absolute
-      margin-left: 18px
+      margin-left: 15px
+      margin-top: 5px
   td
     font-size: 14px
     div
@@ -298,7 +300,6 @@ h1, h2, h3, h4
     font-weight: 40
 
 .step-ingredients-source
-  position: relative
   display: none
 
 #main-content
