--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -187,13 +187,15 @@ body.admin_namespace
 
   .ingredient-table-div
     table
-      width: 550px
+      width: 850px
       table-layout: fixed
     td
       padding-left: 4px
       padding-right: 4px
 
     col.ingredient
+      width: 300px
+    col.note
       width: 300px
     col.quantity
       width: 60px
@@ -212,6 +214,10 @@ body.admin_namespace
     .ingredient
       width: 94%
       text-align: left
+
+    .note
+      width: 94%
+      text-align:  left
 
     .quantity
       text-align: right
