--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -65,6 +65,16 @@ table.ingredients
       td:first-child
         width: 100%
 
+    .note
+      text-transform: uppercase
+      vertical-align: baseline
+      font-size: 75%
+      color:  $gray
+      margin-left: 10px
+
+      .alwayshidden
+        display: none !important
+
     .quantity-edit
       margin-bottom: 0px
       display: inline
