--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -26,12 +26,14 @@
       = sortable_table('ingredients') do
         %colgroup
           %col.ingredient
+          %col.note
           %col.quantity
           %col.unit
           %col.actions
         %tbody
           %tr
             %th.ingredient Ingredient
+            %th.note Note
             %th.quantity Quantity
             %th.unit Unit
             %th
