--- a/app/assets/stylesheets/print.css.sass
+++ b/app/assets/stylesheets/print.css.sass
@@ -1,87 +1,110 @@
-$print_gray: rgb(220, 220, 220)
+// $print_gray: rgb(220, 220, 220)
 
-.noprint
-  display: none !important
+// .noprint
+//   display: none !important
 
-@page
-  margin: 1cm
+// @page
+//   margin: 1cm
 
-p, body, .step-directions li, table.ingredients, .hero-unit
-  font-size: 12pt
-  line-height: 1.2em
+// p, body, .step-directions li, table.ingredients, .hero-unit
+//   font-size: 12pt
+//   line-height: 1.2em
 
-#overview h1
-  color: black
-  font-size: 30pt
+// #overview h1
+//   color: black
+//   font-size: 30pt
 
-.navbar .brand-container
-  margin-left: 20%
-  margin-bottom: 2em
+// .navbar .brand-container
+//   margin-left: 20%
+//   margin-bottom: 2em
 
-.main-container
-  padding: 0
-  float: none !important
+// .main-container
+//   padding: 0
+//   float: none !important
 
-.horizontal-divider
-  display: none
+// .horizontal-divider
+//   display: none
 
-.hero-well
-  background: white
+// .hero-well
+//   background: white
 
-.hero-unit.hero-well.hero-step-by-step
-  border: none
-  padding-top: 0px
+// .hero-unit.hero-well.hero-step-by-step
+//   border: none
+//   padding-top: 0px
 
-.hero-unit
-  font-weight: normal
+// .hero-unit
+//   font-weight: normal
 
-a, .step strong, table.ingredients thead
-  color: black !important
+// a, .step strong, table.ingredients thead
+//   color: black !important
 
-table.ingredients
-  margin-top: 6pt
-  width: 20em
-  line-height: 1em
+// table.ingredients
+//   margin-top: 6pt
+//   width: 20em
+//   line-height: 1em
 
-  thead
-    display: none
+//   thead
+//     display: none
 
-.hero-step-by-step
-  margin-top: 0.5em
-  margin-bottom: 0.5em
+// .hero-step-by-step
+//   margin-top: 0.5em
+//   margin-bottom: 0.5em
 
-  .step
-    margin-top: 1em !important
-    page-break-inside: avoid
+//   .step
+//     margin-top: 1em !important
+//     page-break-inside: avoid
 
-    .step_title
-      box-shadow: 0 0 0 2em $print_gray inset
-      padding-left: 20px
-      width:  100%
-      margin-top: 0px
+//     .step_title
+//       box-shadow: 0 0 0 2em $print_gray inset
+//       padding-left: 20px
+//       width:  100%
+//       margin-top: 0px
 
-    .well
-      padding-top: 0
-      background: transparent
-      border:  none !important
-      box-shadow:  none
+//     .well
+//       padding-top: 0
+//       background: transparent
+//       border:  none !important
+//       box-shadow:  none
 
-    .step-directions
-      vertical-align: top
+//     .step-directions
+//       vertical-align: top
 
-    .step_directions_col
-      width: 60%
+//     .step_directions_col
+//       width: 60%
 
-    .step-img-col
-      margin-right: 0
-      width: 30%
+//     .step-img-col
+//       margin-right: 0
+//       width: 30%
 
-      .well
-        padding-right: 0
+//       .well
+//         padding-right: 0
 
-      img
+//      img
         //filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale")/* Firefox 10+, Firefox on Android */
         //filter: gray
-        -webkit-filter: grayscale(100%)
+//        -webkit-filter: grayscale(100%)
 
+@media print
+  body *
+    visibility: hidden
 
+  .printable, .printable *
+    visibility: visible
+    overflow: visible
+    float: none
+
+  .printable
+    position: absolute
+    left: 0
+    top: 0
+
+  .printable-column
+    width: 50%
+
+  .noprint
+    display: none !important
+
+  .video-container
+    padding-top: 50px
+    padding-bottom: 0px
+    height: auto
