--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -260,6 +260,7 @@ h1, h2, h3, h4
   thead
     line-height: 30px
     font-size: 17.5px
+    border-bottom: 1px solid black
   th#ingredient
     text-align: left
   th#quantity
