footer on homepage only

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -89,3 +89,6 @@
           /   %li FREE Bonus Content: Sous Vide Time and Temperature data sheets
           = link_to sign_up_path, class: 'btn btn-primary btn-large pull' do
             Sign Up Now
+
+= content_for :footer do
+  = render 'layouts/footer'
