--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,6 +32,6 @@
           = msg
       = yield
 
-    = render 'layouts/footer'
+    = yield :footer
   / = render 'layouts/youtube'
   = javascript_include_tag 'application'
