updated signup block

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -92,6 +92,9 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 .modal
   border-radius: 0px
 
+.input-block-level
+  width: 100%
+
 h1, h2, h3, h4
   font-family: 'Raleway', sans-serif
   letter-spacing: 1px
