--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -77,9 +77,10 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     z-index: -1
     opacity: .6
 .well
-  border: none
+  border: 1px solid #ccc
   border-radius: 0px
   background-color: rgba(0,0,0,.1)
+  @include boxsizing
 
 .well-opaque
   background-color: rgba(255,255,255,.8)
