--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,3 +35,5 @@
     = yield :footer
   / = render 'layouts/youtube'
   = javascript_include_tag 'application'
+  = render 'layouts/app_init'
+  = yield(:custom_js)
