quiz working functionally

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,5 @@
  *= require _font-awesome
  *= require redesign
  *= require application/responsiveslides
+ *= require application/quizzes/_overview
  */
