--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -1,15 +1,15 @@
 .quiz-title
-  +font-serif-large
+  //+font-serif-large
 
 #quiz-container
   margin-bottom: 30px
 
   p
-    +font-serif-huge
+    //+font-serif-huge
     margin-top: 0
 
   .hero-unit
-    background: $grayLighter
+    //background: $grayLighter
 
   .overview
     margin: 20px 0 30px 0
