comment out broken box sort

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,4 +15,5 @@
  *= require redesign
  *= require application/responsiveslides
  *= require application/quizzes/_overview
+ *= require application/quizzes/_box_sort_result
  */
