--- a/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
@@ -9,15 +9,15 @@
     margin-top: 2px
     margin-right: 10px
     &.correct
-      background: $green
+      //background: $green
     &.incorrect
-      background: $red
+      //background: $red
     &.ambivalent
-      background: $grayMedium
+      //background: $grayMedium
 
   .option-label
     float: left
-    +font-serif-small
+    //+font-serif-small
     margin-right: 20px
 
   img.key-image
@@ -28,10 +28,10 @@
     padding: 20px 10px
     span
       float: left
-      +font-serif-small
-      color: $grayMedium
+      //+font-serif-small
+      //color: $grayMedium
     p
-      +font-serif-medium
+      //+font-serif-medium
 
     // We decided this was a bad idea, since box sort questions don't really
     // have right or wrong answers. Keeping it around in case we change our minds.
