--- a/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_multiple_choice_result.css.sass
@@ -12,7 +12,7 @@
 
   ol, ul
     list-style-type: upper-alpha
-    +font-sans-small
+    //+font-sans-small
     margin-top: 15px
     margin-left: 45px
 
@@ -35,15 +35,15 @@
   li.status_right
     &:before
       content: "\2714"
-      color: $green
+      //color: $green
 
   li.status_wrong
     &:before
       content: "\2716 "
-      color: $red
+      //color: $red
 
   .label
-    +font-serif-large
+    //+font-serif-large
     font-weight: normal
     text-align: center
     display: block
@@ -53,15 +53,15 @@
     line-height: 28px
 
   .label.correct
-    background: $green
-    color: $white
+    //background: $green
+    //color: $white
 
   .label.incorrect
-    background: $red
-    color: $white
+    //background: $red
+    //color: $white
 
   .label.default
-    color: $black
+    //color: $black
 
   .result-column
     width: 100%
