--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -6,14 +6,14 @@
   position: relative
 
   .instructions
-    +font-serif-medium
+    //+font-serif-medium
     margin-bottom: 20px
 
   .hero-unit
-    +border-radius(3px)
-    background: $grayLighter
-    color: $black
-    border: 1px solid $grayMedium
+    //+border-radius(3px)
+    //background: $grayLighter
+    //color: $black
+    //border: 1px solid $grayMedium
     padding: 30px
     margin-right: 60px
     margin-left: 0
@@ -26,14 +26,14 @@
       display: none
 
   .question-label
-    +font-sans-tiny
-    color: $grayMedium
+    //+font-sans-tiny
+    //color: $grayMedium
     font-weight: 500
     text-transform: uppercase
     margin: 10px 0
 
   .question-text
-    +font-serif-huge
+    //+font-serif-huge
     margin-bottom: 20px
 
   .question-image
@@ -127,27 +127,27 @@
       padding-left: 25px
 
   .image-caption
-    +font-serif-small
+    //+font-serif-small
     text-align: center
     font-weight: bold
-    color: $grayDark
+    //color: $grayDark
     margin: 0 auto 40px
     padding-left: 30px
     float: none
     line-height: 22px
 
   .sort-option
-    +border-radius(3px)
-    +box-shadow(inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5))
+    //+border-radius(3px)
+    //+box-shadow(inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5))
     z-index: 1
     height: 170px
-    background: $beige
+    //background: $beige
     position: relative
     &:before
-      +border-radius(3px)
+      //+border-radius(3px)
       display: none
       content: ""
-      border: 2px dashed $grayLight
+      //border: 2px dashed $grayLight
       position: absolute
       top: 20px
       left: 20px
@@ -158,7 +158,7 @@
         display: block
     &.image-placed
       &:before
-        border-color: $white
+        //border-color: $white
       img
         position: absolute !important
         left: 22px !important
@@ -170,12 +170,12 @@
 
   label
     font-weight: bold
-    color: $grayDark
+    //color: $grayDark
     text-align: center
     margin-top: 10px
 
   .sort-option.image-placed + label
-    color: $brick
+    //color: $brick
 
   img.ui-draggable-dragging
     width: 270px !important
