comment out broken results css

--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -8,8 +8,8 @@
     width: 50%
 
   .results-header, .column-label, .average-label
-    +font-sans-tiny
-    color: $gray
+    //+font-sans-tiny
+    //color: $gray
 
   .results-header, .column-label
     text-transform: uppercase
@@ -32,8 +32,8 @@
 
 
   .count, .type, .student-average
-    +font-serif-small
-    color: $grayMedium
+    //+font-serif-small
+    //color: $grayMedium
 
   @import application/quizzes/box_sort_result
   @import application/quizzes/multiple_choice_result
