--- a/app/assets/stylesheets/application/_dials.css.sass
+++ b/app/assets/stylesheets/application/_dials.css.sass
@@ -5,17 +5,17 @@
   position: relative
 
   canvas
-    +border-radius(100px)
-    background: $white
+    //+border-radius(100px)
+    //background: $white
 
   .dial-text, .dial-caption
-    +font-sans-small
+    //+font-sans-small
     font-weight: 500
     text-align: center
     text-transform: uppercase
 
   .dial-text
-    color: $brick
+    //color: $brick
     position: absolute
     top: 52px
     left: 0
@@ -27,11 +27,11 @@
       font-size: 85px
 
   .dial-caption
-    color: $gray
+    //color: $gray
     margin-top: 10px
     line-height: 20px
     span
-      color: $brick
+      //color: $brick
 
   &.medium
     width: 115px
@@ -46,10 +46,10 @@
     width: 90px
     height: 90px
     .dial-text
-      +font-sans-tiny
+      //+font-sans-tiny
       top: 20px
       line-height: 28px
       strong
         font-size: 36px
     .dial-caption
-      +font-sans-tiny
+      //+font-sans-tiny
