import bootstrap config

--- a/app/assets/stylesheets/application/_checkboxes.css.sass
+++ b/app/assets/stylesheets/application/_checkboxes.css.sass
@@ -1,5 +1,6 @@
 @import compass/css3/images
 @import compass/css3/user-interface
+@import bootstrap_config
 
 [data-behavior~=checkbox], [data-behavior~=radio]
   display: inline-block
@@ -8,8 +9,8 @@
     display: none
 
   label
-    +font-sans-medium
-    +user-select(none)
+    //+font-sans-medium
+    //+user-select(none)
     min-height: 35px
     position: relative
     border: 1px solid transparent
@@ -26,8 +27,8 @@
       height: 26px
       background: $beige
       border: 1px solid darken($beige, 20%)
-      +border-radius(2px)
-      +box-shadow(inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5))
+      //+border-radius(2px)
+      //+box-shadow(inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5))
       position: absolute
       top: 6px
       left: 6px
@@ -35,12 +36,12 @@
     &:hover
       border: 1px solid $grayMedium
       background: $grayLight
-      +border-radius(2px)
+      //+border-radius(2px)
 
   input:checked + label
     border: 1px solid $grayMedium
     background: $grayLight
-    +border-radius(2px)
+    //+border-radius(2px)
 
     &:before
       content: "\2713"
@@ -48,5 +49,5 @@
       font-size: 44px
       line-height: 26px
       color: $brick
-      +background-image(linear-gradient(whiteSmoke, $grayLight 30%, $beige))
-      +box-shadow(0px 2px 3px 0px rgba(0, 0, 0, 0.5))
+      //+background-image(linear-gradient(whiteSmoke, $grayLight 30%, $beige))
+      //+box-shadow(0px 2px 3px 0px rgba(0, 0, 0, 0.5))
