--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,4 +18,5 @@
  *= require application/quizzes/_question
  *= require application/quizzes/_results
  *= require application/_dials
+ *= require application/_checkboxes
  */
