--- a/app/assets/stylesheets/application/quizzes/_results.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_results.css.sass
@@ -1,3 +1,5 @@
+@import bootstrap_config
+
 #quiz-results
   .horizontal-divider
     margin: 20px 0
@@ -9,7 +11,7 @@
 
   .results-header, .column-label, .average-label
     //+font-sans-tiny
-    //color: $gray
+    color: $gray
 
   .results-header, .column-label
     text-transform: uppercase
@@ -33,7 +35,7 @@
 
   .count, .type, .student-average
     //+font-serif-small
-    //color: $grayMedium
+    color: $grayMedium
 
   @import application/quizzes/box_sort_result
   @import application/quizzes/multiple_choice_result
