--- a/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_box_sort_result.css.sass
@@ -1,3 +1,5 @@
+@import bootstrap_config
+
 .box-sort-result
   margin-top: 20px
   .swatch
@@ -9,11 +11,11 @@
     margin-top: 2px
     margin-right: 10px
     &.correct
-      //background: $green
+      background: $green
     &.incorrect
-      //background: $red
+      background: $red
     &.ambivalent
-      //background: $grayMedium
+      background: $grayMedium
 
   .option-label
     float: left
@@ -29,7 +31,7 @@
     span
       float: left
       //+font-serif-small
-      //color: $grayMedium
+      color: $grayMedium
     p
       //+font-serif-medium
 
