change btn next to hero next

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -546,7 +546,7 @@ h1, h2, h3, h4
     margin: 20px 30px
     opacity: .9
 
-.btn-next
+.btn-hero-next
   background: $orange
   height: 100%
   width: 100%
