--- a/app/views/shared/_media_hero.html.haml
+++ b/app/views/shared/_media_hero.html.haml
@@ -19,4 +19,4 @@
               = type
         .pull-right
           = link_to 'javascript:void(0);', class: 'hero-swiper-next' do
-            .btn-next
+            .btn-hero-next
