update quiz next button

--- a/app/assets/stylesheets/application/_buttons.css.sass
+++ b/app/assets/stylesheets/application/_buttons.css.sass
@@ -1,3 +1,5 @@
+@import bootstrap_config
+
 .btn[disabled][data-behavior~='loadable'], .btn.disabled[data-behavior~='loadable']
   &:before
     display: block
