--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -605,6 +605,21 @@ h1, h2, h3, h4
     color: white
     cursor: pointer
 
+/* Quiz button */
+.btn-next, .btn-prev
+  height: 67px
+  width: 32px
+  padding: 0
+  text-decoration: none
+  border-color: transparent
+  [class^="icon-"]
+    line-height: 67px
+    color: white
+
+.btn-next
+  //+box-shadow(-1px 0px 2px 0px rgba(0, 0, 0, 0.5))
+  //+border-radius(0 67px 67px 0)
+
 /* Navbar */
 .navbar-fixed-top
   .navbar-inner
