--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -1,10 +1,10 @@
 - content_for :title, "#{quiz.title.html_safe} Results"
 
-.hero-unit.quiz-title
+.quiz-title
   .container
     .row
       .span12
-        %h3 Your Results for #{quiz.title}
+        %h2 Your Results for #{quiz.title}
 
 #quiz-results.container
   = render 'quizzes/multiple_choice_question_results', results: quiz_results[:multiple_choice]
