quizz looks and functions well

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -46,6 +46,6 @@
       .span12
         %p.pull-left= quiz.start_copy
         .pull-right
-          #start-quiz.btn-uppercase.btn-primary.btn-x-large
+          #start-quiz.btn.btn-primary.btn-large
             = quiz.started_by?(current_user) ? "Return to Quiz" : "Start Quiz"
 
