--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -1,4 +1,5 @@
 @import compass/css3/transition
+@import bootstrap_config
 
 .question
   margin-left: 110%
@@ -11,9 +12,9 @@
 
   .hero-unit
     //+border-radius(3px)
-    //background: $grayLighter
-    //color: $black
-    //border: 1px solid $grayMedium
+    background: $grayLighter
+    color: $black
+    border: 1px solid $grayMedium
     padding: 30px
     margin-right: 60px
     margin-left: 0
@@ -27,7 +28,7 @@
 
   .question-label
     //+font-sans-tiny
-    //color: $grayMedium
+    color: $grayMedium
     font-weight: 500
     text-transform: uppercase
     margin: 10px 0
@@ -130,7 +131,7 @@
     //+font-serif-small
     text-align: center
     font-weight: bold
-    //color: $grayDark
+    color: $grayDark
     margin: 0 auto 40px
     padding-left: 30px
     float: none
@@ -141,13 +142,13 @@
     //+box-shadow(inset 0px 1px 2px 0px rgba(0, 0, 0, 0.5))
     z-index: 1
     height: 170px
-    //background: $beige
+    background: gray
     position: relative
     &:before
-      //+border-radius(3px)
+      border-radius: 3px
       display: none
       content: ""
-      //border: 2px dashed $grayLight
+      border: 2px dashed $grayLight
       position: absolute
       top: 20px
       left: 20px
@@ -158,7 +159,7 @@
         display: block
     &.image-placed
       &:before
-        //border-color: $white
+        border-color: $white
       img
         position: absolute !important
         left: 22px !important
@@ -170,12 +171,12 @@
 
   label
     font-weight: bold
-    //color: $grayDark
+    color: $grayDark
     text-align: center
     margin-top: 10px
 
   .sort-option.image-placed + label
-    //color: $brick
+    color: $brick
 
   img.ui-draggable-dragging
     width: 270px !important
