--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -86,7 +86,7 @@
                         = render 'ingredients_list', ingredients: step.ingredients
           .scroll-overlay-top
           .scroll-overlay-bottom
-        .span6.community.noprint
+        .span6.community.noprint.hide
           .community-toggle
             .btn.btn-primary
               %i.icon-comments Community
