--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,8 +2,8 @@
 - content_for :description, "Free online cooking school from key members of the Modernist Cuisine team. Our first course will teach you everything you need to know about sous vide cooking."
 
 = content_for :hero do  
-  .container-fluid#hero-container
-    .row-fluid
+  .container#hero-container
+    .row
       .span12
         .swipe#hero-swiper
           .swipe-wrap
