--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -154,7 +154,7 @@ h1, h2, h3, h4
 
 .media-hero
   position: relative
-  max-height: 586px
+  //max-height: 586px
   img
     width: 100%
   .media-header-background
@@ -438,10 +438,9 @@ h1, h2, h3, h4
   margin-left: 20px
 
 #hero-container
-  width: 100%
-  margin: 0px
+  margin-top: 40px
   padding: 0px
-  max-height: 586px
+  //max-height: 586px
   z-index: 999
   #hero-carousel
     .carousel-indicators
@@ -682,7 +681,8 @@ h1, h2, h3, h4
 @media (min-width: 1200px)
   .media-hero
     img
-      margin-top: -15%
+      margin-top: -5%
+      margin-bottom: -5%
 
   .media-centered-medium
     height: 208px
